--- a/src/app/styles/Button.scss
+++ b/src/app/styles/Button.scss
@@ -12,7 +12,11 @@
     border: none;
     cursor: pointer;
                  @media(width >= 60rem){
-                padding: 1rem 1rem;
+                  padding: 1rem 1rem;
 
+    }
+    transition: transform 0.3s ease;
+       &:hover{
+        transform: scale(1.1);
     }
 }
