--- a/src/app/styles/button_genre.scss
+++ b/src/app/styles/button_genre.scss
@@ -1,6 +1,6 @@
 
-button{
-    background-color: #DDDDDD;
+.genre_button{
+    background-color: #B20710;
     padding: .75rem 1.5rem;
     display: flex;
     gap: 1rem;
@@ -9,13 +9,13 @@ button{
     align-items: center;
     justify-items: center;
     font-size: .75rem;
-    color: black;
-    font-weight: 300;
+    color: white;
+    font-weight: bold;
     cursor: pointer;
-    transition: opacity 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
     border: none;
         &:hover{
-            opacity: 0.4;
+            transform: scale(1.1);
 
         }
 }
