--- a/src/app/styles/NavBar.scss
+++ b/src/app/styles/NavBar.scss
@@ -12,7 +12,7 @@
             font-size: 2rem;
             font-weight: bold;
             cursor: pointer;
-                @media(width < 60rem){
+                @media(width <= 414px) {
                    font-size: 1.5rem;
                     
 
@@ -30,7 +30,8 @@
                 .nav_lang{
                     text-align: center;
                     font-size: .7rem;
-                                 @media(width >= 60rem){
+                    cursor: pointer;
+                                 @media(width > 414px) {
                                         font-size: 1rem;
                }
                 }
