--- a/src/app/styles/Slider_component.scss
+++ b/src/app/styles/Slider_component.scss
@@ -1,52 +1,50 @@
-@import 'colors';
+@import "colors";
 
-.slide_main_div{
-    padding: 1rem 2rem;
-        .trending{
-            font-weight: bold;
-             color: white;
-             margin-bottom: 2rem;
-             font-size: 1rem;
-             @media(width > 60rem){
-                font-size: 1.5rem;
-             }
+.slide_main_div {
+  padding: 1rem 2rem;
+  .trending {
+    font-weight: bold;
+    color: white;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+    @media (width > 60rem) {
+      font-size: 1.5rem;
+    }
+  }
+  .image_div {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    @media (width<= 414px) {
+      gap: 0.2rem;
+    }
 
-        }
-        .image_div{
-            display: flex;
-            gap: 1rem;
-            align-items: center;
-                  @media (width< 414px){
-                   gap: .2rem;
-                 }
-            
-             img{
-                border-radius: 1rem;
-                cursor: pointer;
-                 @media (width< 414px){
-                    width: 6rem;
-                    height: 90%;
-                 }
-                 transition: transform 0.3s ease;
-                       &:hover{
-                        transform: scale(1.1);
-                    }
-             }
-        }
-        .slider_button{
-            padding: 2rem .3rem;
-            background-color: gray;
-            font-weight: bolder;
-            height: 6rem;
-            border-radius: 5px;
-            border: none;
-            color: black;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-                &:hover{
-                 transform: scale(1.1);
-             }
-        }
-
+    img {
+      border-radius: 1rem;
+      cursor: pointer;
+      @media (width<= 414px) {
+        width: 6rem;
+        height: 90%;
+      }
+      transition: transform 0.3s ease;
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+  .slider_button {
+    padding: 2rem 0.3rem;
+    background-color: gray;
+    font-weight: bolder;
+    height: 6rem;
+    border-radius: 5px;
+    border: none;
+    color: black;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
 }
