--- a/app/styles/SignInForm.scss
+++ b/app/styles/SignInForm.scss
@@ -4,7 +4,7 @@
     color: white;
     padding: 2rem 3rem;
    box-shadow: inset 0 0 10px rgba(150, 140, 140, 0.5);
-         @media(width>= 414px){
+         @media(width > 60rem){
                 padding: 3rem 45rem;
              }
         form{
