--- a/app/styles/LoginForm.scss
+++ b/app/styles/LoginForm.scss
@@ -24,6 +24,7 @@
             background-color: #34495e;
             color: white;
             display: inline-block;
+            font-size: 16px;
           }
           button{
             padding: 1rem 4rem;
