--- a/app/styles/Genre.scss
+++ b/app/styles/Genre.scss
@@ -66,6 +66,8 @@
                         img{
                             border-radius: 3rem;
                             cursor: pointer;
+                            width: 20rem;
+                            height: 25rem;
                             padding: 1rem 1rem;
                             transition: transform 0.3s ease;
                                 &:hover{
