--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Karla:ital,wght@0,200..800;1,200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-@import "../app/styles/colors";
+@import "./styles/colors.scss";
 
 * {
   padding: 0;
@@ -12,8 +12,7 @@ body {
    font-family: 'Poppins', 'Inter', 'Montserrat', sans-serif;
 }
 .Navbar{
-  background-image: linear-gradient(rgba(0, 0, 0,0.7), rgba(0, 0, 0,0.4)), url('../app/images/illustration-anime-city.jpg');
-  background-size: cover;
+background-image: linear-gradient(rgba(0, 0, 0,0.7), rgba(0, 0, 0,0.4)), url('/images/illustration-anime-city.jpg');  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
