--- a/app/[locale]/styles/Herosection2.scss
+++ b/app/[locale]/styles/Herosection2.scss
@@ -1,12 +1,17 @@
 @import 'colors';
 
 .Hero_main_container{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: $main_text_color;
     padding: 3rem 4rem;
     text-align: center;
+        @media (width< 60rem){
+    padding-top: 10rem;
+
+        }
 
         @media(width >= 60rem){
         padding-top: 10rem;
@@ -31,5 +36,37 @@
         cursor: pointer;
         margin-right: 1rem;
         font-size: 16px;
+        border: none;
     }
+}
+.search-result {
+    background-color:#1B1D3A;
+  padding: 1rem 1rem;
+
+  border-radius: 1rem;
+  max-width: 300px;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  cursor: pointer;
+
+  @media (max-width: 600px) {
+    padding: 1rem 0.5rem;
+    max-width: 95vw;
+  }
+}
+.clear-search{
+    position: absolute;
+    right: 100px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #888;
+    font-size: 1.2rem;
+    transition: color 0.3s ease;
+        @media (width < 60rem) {
+            right: 23px;
+            top: 39%;
+}
 }
