--- a/app/styles/LoginForm.scss
+++ b/app/styles/LoginForm.scss
@@ -7,6 +7,9 @@
              @media(width > 60rem){
                 padding: 3rem 45rem;
              }
+             h1{
+              text-align: center;
+             }
           form{
             display: flex;
             flex-direction: column;
