--- a/app/styles/Genre.scss
+++ b/app/styles/Genre.scss
@@ -131,6 +131,7 @@
         border: none;
         font: 14px;
         border-radius: 1rem;
+        font-size: 14px;
     }
     .clear-search{
     position: absolute;
