--- a/app/[locale]/styles/Join.scss
+++ b/app/[locale]/styles/Join.scss
@@ -2,6 +2,10 @@
 
 
 .join_container{
+    opacity: 0;
+    transition: all 1s;
+    filter: blur(5px);
+    transform: translateY(100%);
 
     .r_heading{
         color: white;
@@ -21,3 +25,9 @@
       
     }
 }
+ .show{
+        opacity: 1;
+        filter: blur(0);
+        transform: translateY(0);
+                    
+                }
