--- a/app/[locale]/styles/LoginForm.scss
+++ b/app/[locale]/styles/LoginForm.scss
@@ -1,48 +1,59 @@
 @import 'colors';
 
-.form_container{
+.form_container {
+  color: white;
+  padding: 2rem 3rem;
+  box-shadow: inset 0 0 10px rgba(150, 140, 140, 0.5);
+
+  @media (width > 60rem) {
+    padding: 3rem 45rem;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    width: 100%;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  input,
+  button {
+    width: 100%;           // Make both full width of the form
+    max-width: 350px;      // Optional: set a max width for better look
+    box-sizing: border-box;
+    padding: 1rem 2rem;    // Same padding for both
+    margin-top: 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    font-size: 16px;
+    display: inline-block;
+  }
+
+  input {
+    background-color: #34495e;
     color: white;
-    padding: 2rem 3rem;
-   box-shadow: inset 0 0 10px rgba(150, 140, 140, 0.5);
-             @media(width > 60rem){
-                padding: 3rem 45rem;
-             }
-             h1{
-              text-align: center;
-             }
-          form{
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            align-items: center;
-          }
-          h2{
-            text-align: center;
-            margin-bottom: 1rem;
-          }
-          input{
-            padding: 1rem 4rem;
-            margin-top: 1rem;
-            border: none;
-            border-radius: 0.5rem;
-            background-color: #34495e;
-            color: white;
-            display: inline-block;
-            font-size: 16px;
-          }
-          button{
-            padding: 1rem 4rem;
-            border: none;
-            border-radius: 0.5rem;
-            background-color:$btn-bg;
-            color: $btn-color;
-            margin-bottom: 2rem;
-            cursor: pointer;
-            font-weight: bold;
-           transition: transform 0.3s ease;
-           font-size: 1rem;
-            &:hover{
-                transform: scale(1.1);
+  }
+
+  button {
+    background-color: $btn-bg;
+    color: $btn-color;
+    margin-bottom: 2rem;
+    cursor: pointer;
+    font-weight: bold;
+    transition: transform 0.3s ease;
+    font-size: 1rem;
+    &:hover {
+      transform: scale(1.1);
     }
-          }
+  }
 }
