--- a/app/[locale]/styles/QuestionSection.scss
+++ b/app/[locale]/styles/QuestionSection.scss
@@ -9,11 +9,22 @@
        opacity: 0;
     transition: all 1s;
     filter: blur(5px);
-    transform: translateX(100%);
+    transform: translateX(50%);
+      @media(width < 500px){
+        transform: translateY(50%);
+      }
 }
 .show{
         opacity: 1;
         filter: blur(0);
         transform: translateX(0);
+             @media(width < 500px){
+        transform: translateY(0);
+      }
                     
                 }
+h1{
+    font-size: 1rem;
+    color: white;
+    text-align: start;
+}
