--- a/app/[locale]/styles/SignInForm.scss
+++ b/app/[locale]/styles/SignInForm.scss
@@ -12,6 +12,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
             gap: 1rem;
           }
                 h2{
@@ -30,6 +31,7 @@
           }
           button{
             padding: 1rem 4rem;
+            width: 100%;
             border: none;
             border-radius: 0.5rem;
             background-color:$btn-bg;
