--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -55,3 +55,6 @@ background-image: linear-gradient(rgba(0, 0, 0,0.7), rgba(0, 0, 0,0.4)), url('/i
                   color: #B20710;
                 }
         }
+h1{
+  text-align: center;
+}
