--- a/app/[locale]/styles/Slider_component.scss
+++ b/app/[locale]/styles/Slider_component.scss
@@ -1,7 +1,12 @@
 @import "colors";
 
 .slide_main_div {
-  padding: 1rem 2rem;
+   padding: 1rem 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .trending {
     font-weight: bold;
     color: white;
