perf: improved the Navbar UI

--- a/app/[locale]/styles/DashboardUI.scss
+++ b/app/[locale]/styles/DashboardUI.scss
@@ -66,6 +66,7 @@
 .go_to_homepage{
      padding: .5rem 1rem;
      margin-top: 2rem;
+     margin-right: 2rem;
     background-color:$btn-bg;
     color: $btn-color;
     font-weight: 500;
