--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -58,3 +58,12 @@ background-image: linear-gradient(rgba(0, 0, 0,0.7), rgba(0, 0, 0,0.4)), url('/i
 h1{
   text-align: center;
 }
+.user-icon {
+  font-size: 1.5rem;
+
+  @media (max-width: 700px) {
+    font-size: 2.5rem;
+  }
+
+  
+}
