--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -59,9 +59,14 @@ h1{
   text-align: center;
 }
 .user-icon {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  color: white;
+  transition: color 1s ease;
+    &:hover{
+      color: purple;
+    }
 
-  @media (max-width: 700px) {
+  @media (width>= 700px) {
     font-size: 2.5rem;
   }
 
